# serenity

Base/res/apps/: BuggieRSS.af
Userland/Applications/: CMakeLists.txt
Userland/Applications/BuggieRSS/: BuggieRSSWidget.cpp  BuggieRSSWidget.h  BuggieRSSWindow.gml  CMakeLists.txt  RSSModel.cpp  RSSModel.h  main.cpp
Userland/Applications/XMLEditor/: CMakeLists.txt  XMLEditor.gml  main.cpp
Userland/Libraries/: CMakeLists.txt
Userland/Libraries/LibXML/: CMakeLists.txt  XMLParser.cpp  XMLParser.h
